Fixed sub titles, and header now has status about who's on shift & next

--- a/src/app/views/header/_header.scss
+++ b/src/app/views/header/_header.scss
@@ -3,7 +3,6 @@
  * This file contains styles specific to the header template of the app
  */
 .status {
-	border-bottom: 1px solid $color_gray;
 	background-color: $color_bg_dark;
 	color: $color_text_light;
 	max-height: 5em; // More or less...
